# reto_dApp

./: README.md
reto-dApp/: .gitignore  package-lock.json  package.json
reto-dApp/commands/: raffleManagerCommands.sh
reto-dApp/contract/: Cargo.toml  README.md
reto-dApp/contract/raffle_smart_contract/: Cargo.toml  Readme.md  commands.sh  commands.txt
reto-dApp/contract/raffle_smart_contract/neardev/: dev-account  dev-account.env
reto-dApp/contract/raffle_smart_contract/src/: external.rs  lib.rs
reto-dApp/contract/src/: lib.rs
reto-dApp/frontend/: App.js  HomePage.js  index.js  package-lock.json  ui-components.js
reto-dApp/frontend/assets/: global.css
reto-dApp/raffle-frontend/: package-lock.json  package.json
reto-dApp/raffle-frontend/context/: ContractContext.js  WalletContext.js
reto-dApp/raffle-frontend/lib/: CreateRufflePage.js  ExploreRufflesPage.js  RaffleContract.js  RaffleManagerContract.js  near-wallet.js
reto-dApp/raffle-frontend/pages/: _app.js  index.js
reto-dApp/raffle-frontend/styles/: Home.module.css  globals.css
reto-dApp/raffle-frontend/utils/: near-wallet.js
